force-app/main/default/objects/NSSSalesProduct__c/NSSSalesProduct__c.object-meta.xml
<CustomObject>
    <description>Products imported for NSS Sales</description>
    <label>NSS Sales Product</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>NSS Sales Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NSS Sales Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>