force-app/main/default/objects/NSSSalesProduct__c/fields/ContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>ContractRevenue__c</fullName>
    <label>Contract Revenue</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>