force-app/main/default/objects/NSSSalesProduct__c/fields/EvaluateProspectOwnership__c.field-meta.xml
<CustomField>
    <fullName>EvaluateProspectOwnership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evaluate Prospect Ownership</label>
    <type>Checkbox</type>
</CustomField>