force-app/main/default/objects/NSSSalesProduct__c/fields/NumberOfChecks__c.field-meta.xml
<CustomField>
    <fullName>NumberOfChecks__c</fullName>
    <label>Number Of Checks</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>