force-app/main/default/objects/NSSSalesProduct__c/listViews/HRS_Linked_to_Opps.listView-meta.xml
<ListView>
    <fullName>HRS_Linked_to_Opps</fullName>
    <columns>NAME</columns>
    <columns>NSSSalesClient__c</columns>
    <columns>ProductCode__c</columns>
    <columns>ProductCodeDescription__c</columns>
    <columns>FirstRunDate__c</columns>
    <columns>SalesRep__c</columns>
    <columns>NbrOppLinks__c</columns>
    <columns>ProductType__c</columns>
    <columns>EvaluateProspectOwnership__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProductType__c</field>
        <operation>equals</operation>
        <value>HRS</value>
    </filters>
    <filters>
        <field>NbrOppLinks__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>HRS Linked to Opps</label>
</ListView>