force-app/main/default/objects/NSSSalesProduct__c/listViews/Loaded_Today_PAY.listView-meta.xml
<ListView>
    <fullName>Loaded_Today_PAY</fullName>
    <columns>NAME</columns>
    <columns>NSSSalesClient__c</columns>
    <columns>ProductCode__c</columns>
    <columns>AuditProduct__c</columns>
    <columns>ProductType__c</columns>
    <columns>FirstRunDate__c</columns>
    <columns>SalesRep__c</columns>
    <columns>NbrOppLinks__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>ProductType__c</field>
        <operation>equals</operation>
        <value>PAY</value>
    </filters>
    <label>Loaded Today - PAY</label>
</ListView>