force-app/main/default/objects/NSSSalesProduct__c/listViews/MMS_Products.listView-meta.xml
<ListView>
    <fullName>MMS_Products</fullName>
    <columns>NAME</columns>
    <columns>NSSSalesClient__c</columns>
    <columns>ProductCode__c</columns>
    <columns>AuditProduct__c</columns>
    <columns>FirstRunDate__c</columns>
    <columns>SalesRep__c</columns>
    <columns>NbrOppLinks__c</columns>
    <columns>ProductType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AuditProduct__c</field>
        <operation>equals</operation>
        <value>MMS</value>
    </filters>
    <label>MMS Products</label>
</ListView>