force-app/main/default/objects/NSSSalesProduct__c/listViews/Payroll.listView-meta.xml
<ListView>
    <fullName>Payroll</fullName>
    <columns>NAME</columns>
    <columns>NSSSalesClient__c</columns>
    <columns>ProductCode__c</columns>
    <columns>FirstRunDate__c</columns>
    <columns>SalesRep__c</columns>
    <columns>NbrOppLinks__c</columns>
    <columns>ProductType__c</columns>
    <columns>EvaluateProspectOwnership__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProductType__c</field>
        <operation>equals</operation>
        <value>PAY</value>
    </filters>
    <label>Payroll</label>
</ListView>